personal details added

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,7 @@
   --color-foreground: #171717;
 
   --color-primary: #0062e1;
+  --color-primary-light: #3889FF;
   --color-primary-medium: #0241bd;
   --color-primary-dark: #0033a1;
   --color-secondary: #1a314d;
